--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <script src="script.js"></script>
-    <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
+
   </head>
   <body>
-    <h1>Hello there!</h1>
-    <a href="/me.html">My other page</a>
+    <h1>Minhas Atividades</h1>
+    <ul>
+      <li>Atividade avaliativa 1</li>
+      <li>Atividade avaliativa 2</li>
+      <li><a href="www.ifnmg.edu.br">Portal IFNMG</a></li>
+    
+    </ul>
   </body>
 </html>
